// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UseToast should render different actions 1`] = `
"<div class=\\"toast-container \\"><div class=\\"toast  \\"><div class=\\"message\\">hello</div><div class=\\"action\\"><button class=\\"btn \\"><div class=\\"text\\">remove</div><style>
        .btn {
          box-sizing: border-box;
          display: inline-block;
          padding: 0 0.625rem;
          height: 1.5rem;
          line-height: 1.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 5px;
          font-weight: 400;
          font-size: .75rem;
          user-select: none;
          outline: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 0.2s ease;
          position: relative;
          overflow: hidden;
          color: #fff;
          background-color: #000;
          border: 1px solid #000;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: none;
        }
        
        .btn:hover {
          color: #000;
          background-color: #fff;
          border-color: #000;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: none;
          transform: translate3d(0px, 0px, 0px);
        }
        
        .text {
          position: relative;
          z-index: 1;
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          top: -1px;
        }
        
        .text :global(p), .text :global(pre), .text :global(div) {
          margin: 0;
        }
      </style></button><button class=\\"btn \\"><div class=\\"text\\">remove</div><style>
        .btn {
          box-sizing: border-box;
          display: inline-block;
          padding: 0 0.625rem;
          height: 1.5rem;
          line-height: 1.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 5px;
          font-weight: 400;
          font-size: .75rem;
          user-select: none;
          outline: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 0.2s ease;
          position: relative;
          overflow: hidden;
          color: #666;
          background-color: #fff;
          border: 1px solid #eaeaea;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: none;
        }
        
        .btn:hover {
          color: #000;
          background-color: #fff;
          border-color: #000;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: none;
          transform: translate3d(0px, 0px, 0px);
        }
        
        .text {
          position: relative;
          z-index: 1;
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          top: -1px;
        }
        
        .text :global(p), .text :global(pre), .text :global(div) {
          margin: 0;
        }
      </style></button></div><style>
        .toast {
          width: 420px;
          max-width: 90vw;
          max-height: 75px;
          display: flex;
          justify-content: space-between;
          align-items: center;
          color: #000;
          background-color: #fff;
          color: #000;
          border: 0;
          border-radius: 5px;
          padding: 16pt;
          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
          position: absolute;
          bottom: 0;
          right: 0;
          opacity: 0;
          transform: translate3d(0, 100%, 0px) scale(1);
          transition: all 400ms ease;
        }
        
        .toast.visible {
          opacity: 1;
          transform: translate3d(0, calc(100% + -75px + -0px), -0px) scale(1);
        }
        
        .toast.hide {
          opacity: 0;
          visibility: hidden;
          pointer-events: none;
        }

        .message {
          align-items: center;
          height: 100%;
          transition: opacity .4s ease;
          font-size: .875rem;
          display: -webkit-box;
          word-break: break-all;
          padding-right: 8pt;
          overflow: hidden;
          max-height: 100%;
          text-overflow: ellipsis;
          -webkit-box-orient: vertical;
          -webkit-line-clamp: 2;
          line-height: 1.1rem;
        }
        
        .toast :global(button + button) {
          margin-left: 4pt;
        }
      </style></div><style>
          .toast-container {
            position: fixed;
            width: 420px;
            max-width: 90vw;
            bottom: 16pt;
            right: 16pt;
            z-index: 2000;
            transition: all 400ms ease;
            box-sizing: border-box;
          }
          
          .toast-container.hover {
            transform: translate3d(0, -10px, 0);
          }
        </style></div>"
`;

exports[`UseToast should work with different types 1`] = `
"<div class=\\"toast-container \\"><div class=\\"toast  \\"><div class=\\"message\\">hello</div><div class=\\"action\\"></div><style>
        .toast {
          width: 420px;
          max-width: 90vw;
          max-height: 75px;
          display: flex;
          justify-content: space-between;
          align-items: center;
          color: #000;
          background-color: #0070f3;
          color: #fff;
          border: 0;
          border-radius: 5px;
          padding: 16pt;
          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
          position: absolute;
          bottom: 0;
          right: 0;
          opacity: 0;
          transform: translate3d(0, 100%, 0px) scale(1);
          transition: all 400ms ease;
        }
        
        .toast.visible {
          opacity: 1;
          transform: translate3d(0, calc(100% + -75px + -0px), -0px) scale(1);
        }
        
        .toast.hide {
          opacity: 0;
          visibility: hidden;
          pointer-events: none;
        }

        .message {
          align-items: center;
          height: 100%;
          transition: opacity .4s ease;
          font-size: .875rem;
          display: -webkit-box;
          word-break: break-all;
          padding-right: 8pt;
          overflow: hidden;
          max-height: 100%;
          text-overflow: ellipsis;
          -webkit-box-orient: vertical;
          -webkit-line-clamp: 2;
          line-height: 1.1rem;
        }
        
        .toast :global(button + button) {
          margin-left: 4pt;
        }
      </style></div><style>
          .toast-container {
            position: fixed;
            width: 420px;
            max-width: 90vw;
            bottom: 16pt;
            right: 16pt;
            z-index: 2000;
            transition: all 400ms ease;
            box-sizing: border-box;
          }
          
          .toast-container.hover {
            transform: translate3d(0, -10px, 0);
          }
        </style></div>"
`;
